Added some tags and testing a link

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-## testing index.html
+<h1>PORTpractice</h1>
+
+<head>
+</head>
+<body>
+  <a href="https://www.codewars.com/users/Deign">CodeWars</a>
+</body>
