--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<h1>PORTpractice</h1>
-
 <head>
+  <title>PORTpractice</title>
 </head>
 <body>
   <a href="https://www.codewars.com/users/Deign">CodeWars</a>
