testing link to github profile with image

--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
 <body>
   <h1>PORTpractice</h1>
   <a href="https://www.codewars.com/users/Deign">CodeWars</a>
+  <a href="https://github.com/Deign77"><img src="https://github.com/Deign77/PORTpractice/blob/master/GitHub-Mark-120px-plus.png"</img></a>
 </body>
