--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 </head>
 <body>
   <h1>PORTpractice</h1>
-  <a href="https://www.codewars.com/users/Deign">CodeWars</a>
-  <a href="https://github.com/Deign77"><img src="https://github.com/Deign77/PORTpractice/blob/master/GitHub-Mark-120px-plus.png"</img></a>
+  <div>
+    <a href="https://www.codewars.com/users/Deign">CodeWars</a>
+  </div>
+  <div>
+    <a href="https://github.com/Deign77"><img src="https://github.com/Deign77/PORTpractice/blob/master/GitHub-Mark-120px-plus.png"</img></a>
+  </div>
 </body>
