--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <a href="https://www.codewars.com/users/Deign">CodeWars</a>
   </div>
   <div>
-    <a href="https://github.com/Deign77"><img src="https://github.com/Deign77/PORTpractice/blob/master/GitHub-Mark-120px-plus.png"</img></a>
+    <a href="https://github.com/Deign77"><img src="https://github.com/Deign77/PORTpractice/blob/master/GitHub-Mark-120px-plus.png"></a>
   </div>
 </body>
