--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
   <div>
     <a href="https://github.com/Deign77"><img src="https://github.com/Deign77/PORTpractice/blob/master/GitHub-Mark-120px-plus.png" alt="IMG"></a>
   </div>
+  <div><img src="https://github.com/Deign77/PORTpractice/blob/master/GitHub-Mark-120px-plus.png" alt="IMG"></div>
 </body>
