--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <a href="https://www.codewars.com/users/Deign">CodeWars</a>
   </div>
   <div>
-    <a href="https://github.com/Deign77"><img src="https://github.com/Deign77/PORTpractice/blob/master/GitHub-Mark-120px-plus.png" alt="IMG"></a>
+    <a href="https://github.com/Deign77"><img src="https://github.com/Deign77/PORTpractice/blob/master/GitHub-Mark-120px-plus.png?raw=true" width="300" height="300" alt="IMG"></a>
   </div>
   <div><img src="https://github.com/Deign77/PORTpractice/blob/master/GitHub-Mark-120px-plus.png?raw=true" width="300" height="300" alt="IMG"></div>
 </body>
