added profile links with icons

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 </head>
 <body>
   <h1>PORTpractice</h1>
+  
   <div>
-    <a href="https://www.codewars.com/users/Deign">CodeWars</a>
+    <a href="https://github.com/Deign77"><img src="https://github.com/Deign77/PORTpractice/blob/master/Website%20Icons/GitHub-Mark-120px-plus.png?raw=true" width="200" height="200" alt="IMG"></a>
   </div>
   <div>
-    <a href="https://github.com/Deign77"><img src="https://github.com/Deign77/PORTpractice/blob/master/GitHub-Mark-120px-plus.png?raw=true" width="200" height="200" alt="IMG"></a>
+    <a href="https://www.codewars.com/users/Deign"><img src="https://github.com/Deign77/PORTpractice/blob/master/Website%20Icons/codewars-icon.png?raw=true" width="200" height="200" alt="IMG"></a>
   </div>
   <div>
-    <a href="https://www.codewars.com/users/Deign"><img src="https://github.com/Deign77/PORTpractice/blob/master/GitHub-Mark-120px-plus.png?raw=true" width="200" height="200" alt="IMG"></a>
+    <a href="https://www.hackerrank.com/david_wesseling1"><img src="https://github.com/Deign77/PORTpractice/blob/master/Website%20Icons/hackerrank-icon.png?raw=true" width="200" height="200" alt="IMG"></a>
   </div>
   <div>
-    <a href="https://github.com/Deign77"><img src="https://github.com/Deign77/PORTpractice/blob/master/GitHub-Mark-120px-plus.png?raw=true" width="200" height="200" alt="IMG"></a>
+    <a href="https://uk.linkedin.com/in/david-wesseling-a511748a"><img src="https://github.com/Deign77/PORTpractice/blob/master/Website%20Icons/linkedin-icon.png?raw=true" width="200" height="200" alt="IMG"></a>
   </div>
-  <div></div>
-  <div></div>
+  
 </body>
